--- a/smallslive/static/sass/pages/_home.scss
+++ b/smallslive/static/sass/pages/_home.scss
@@ -13,7 +13,6 @@ body {
 
 @mixin variable-admin-padding($extra) {
   @media (max-width: $screen-sm-max) {
-    padding-top: 16.6vw;
     &.admin-shown {
       padding-top: ($mobile-bar-height * 2) + $extra;
     }
@@ -21,11 +20,6 @@ body {
 }
 
 body.mobile-search-header-shown {
-
-  .main-container:first-of-type {  // Some pages have seveal main-container ლ(ಠ益ಠლ)
-    @include variable-admin-padding($mobile-bar-height * 2);
-  }
-
   .mobile-header .fa-search {
     color: $accent-color;
   }
